--- a/src/sass/component/_archive.scss
+++ b/src/sass/component/_archive.scss
@@ -1,17 +1,23 @@
 .archive {
-  @include tablet {
+  @include tabletMin {
     padding: 0 45px;
   }
+
   padding: 0 20px;
   background-color: $section-bg-fon;
 }
 
 .archive-container {
-  @include tablet {
+  @include tabletMin {
     padding-top: 62px;
   }
+
   @include mobile {
     max-width: 280px;
+  }
+
+  @include desktop {
+    width: 760px;
   }
 
   width: 100%;
@@ -20,7 +26,7 @@
 }
 
 .archive-box-content {
-  @include tablet {
+  @include tabletMin {
     margin-left: 32px;
   }
 }
@@ -32,7 +38,7 @@
     padding: 0 0 44px 0;
   }
 
-  @include tablet {
+  @include tabletMin {
     display: flex;
     padding-bottom: 62px;
 
@@ -41,19 +47,29 @@
     }
     &__noImg {
       padding-bottom: 52px;
+      margin-left: -32px;
     }
   }
 }
 
+// .archive-card-img__noImg {
+//   display: block;
+//   margin-left: -32px;
+// }
+
 .archive-img {
-  @include tablet {
+  @include tabletMin {
     max-width: 200px;
   }
   border-radius: 10px;
 }
 
+.archive-imgRad {
+  border-radius: 10px;
+}
+
 .archive-title {
-  @include tablet {
+  @include tabletMin {
     padding-top: 0;
   }
   @include font(17px, 1.6);
