--- a/src/sass/component/_footer.scss
+++ b/src/sass/component/_footer.scss
@@ -2,6 +2,11 @@
   @include tablet {
     padding: 52px 137px;
   }
+  @include desktop {
+    display: flex;
+    justify-content: center;
+    padding: 100px 320px;
+  }
   @include mobile {
     max-width: 320px;
     padding: 62px 20px 32px 20px;
@@ -9,16 +14,48 @@
   }
 }
 
+.footer-block-text {
+  @include desktop {
+    max-width: 412px;
+
+    @media screen and (min-width: 1023px) {
+      min-width: 412px;
+    }
+  }
+}
+
 .footer-text {
+  @include desktop {
+    @include font(18px, 1.2);
+    padding: 20px 0 0 0;
+  }
   padding: 16px 0 28px 0;
   color: $secondary-clr-t;
 }
 
+.nav-footer {
+  @include desktop {
+    display: flex;
+  }
+}
+
 .nav-footer-list {
+  @include desktop {
+    display: block;
+    margin-left: 152px;
+  }
+
   display: flex;
 }
 
 .nav-footer-item {
+  @include desktop {
+    @include font(16px, 1.4);
+    margin: 0;
+    &:last-child {
+      padding-bottom: 0;
+    }
+  }
   @include font(13px, 1.5);
 
   margin-right: 20px;
@@ -30,20 +67,53 @@
 }
 
 .info-footer-list {
+  @include desktop {
+    display: block;
+    margin-left: 132px;
+  }
+
   display: flex;
   flex-wrap: wrap;
 }
 
 .info-footer-item {
-  margin-right: 52px;
-  padding-bottom: 12px;
-  min-width: 76px;
-
-  &:nth-child(2n) {
-    margin-right: 0;
+  @include tablet {
+    padding-bottom: 0;
+    margin-right: 20px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
-  &:nth-child(n + 3) {
-    padding-bottom: 0;
+  @include desktop {
+    @include font(16px, 1.4);
+    margin: 0;
+    padding: 0;
+    padding-bottom: 20px;
+
+    &:last-child {
+      padding-bottom: 0px;
+    }
+  }
+
+  @include mobile {
+    margin-right: 52px;
+    padding-bottom: 12px;
+    min-width: 76px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    &:nth-child(n + 3) {
+      padding-bottom: 0;
+    }
+  }
+}
+
+.footer-box {
+  @include desktop {
+    display: flex;
+    align-items: baseline;
   }
 }
