--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin mobileMax {
+  @media screen and (min-width: 320px) and (max-width: 1023px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     @content;
